payer_agentforce_agents/BenefitsAndEligibilityAgent/force-app/main/default/objects/Claim/fields/Claim_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Claim_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Claim External ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>