payer_agentforce_agents/BenefitsAndEligibilityAgent/force-app/main/default/objects/Claim/fields/CPT_Codes__c.field-meta.xml
<CustomField>
    <fullName>CPT_Codes__c</fullName>
    <label>CPT Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>