payer_agentforce_agents/BenefitsAndEligibilityAgent/force-app/main/default/objects/Claim/fields/CPT_Descriptions__c.field-meta.xml
<CustomField>
    <fullName>CPT_Descriptions__c</fullName>
    <label>CPT Descriptions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>