payer_agentforce_agents/BenefitsAndEligibilityAgent/force-app/main/default/objects/Claim/fields/Diagnosis_Codes__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Codes__c</fullName>
    <label>Diagnosis Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>