payer_agentforce_agents/BenefitsAndEligibilityAgent/force-app/main/default/objects/Claim/fields/ERA_Number__c.field-meta.xml
<CustomField>
    <fullName>ERA_Number__c</fullName>
    <label>ERA Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>