payer_agentforce_agents/BenefitsAndEligibilityAgent/force-app/main/default/objects/Claim/fields/Member_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Member_Responsibility__c</fullName>
    <label>Member Responsibility</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>